<resources>
    <string name="app_name">UsandoSQLite</string>
    <string name="tvcodigo">Código</string>
    <string name="tvnome_diciplina">Nome da Disciplina</string>
    <string name="tvnota">Nota</string>
    <string name="btincluir">Incluir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btpesquisar">Pesquisar</string>
    <string name="btlistar">Listar</string>
    <string name="title_activity_lista">ListaActivity</string>
</resources>
